# Imu_driver_code

./: README.md
IMU_Uploader/: BUILD.md  CMakeLists.txt  IMU_Uploader.pro  README.md  main.cpp
IMU_Uploader/protocols/: imu_protocol.json
IMU_Uploader/resources/: resources.qrc
IMU_Uploader/resources/themes/: dark.qss
IMU_Uploader/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
IMU_Uploader/src/config/: ConfigManager.cpp  ConfigManager.h  DeviceManager.cpp  DeviceManager.h
IMU_Uploader/src/data/: DataBuffer.cpp  DataBuffer.h  FFTAnalyzer.cpp  FFTAnalyzer.h  Statistics.cpp  Statistics.h
IMU_Uploader/src/serial/: ProtocolParser.cpp  ProtocolParser.h  SerialPort.cpp  SerialPort.h
IMU_Uploader/src/utils/: CRC.cpp  CRC.h  Logger.cpp  Logger.h
IMU_Uploader/src/visualization/: AttitudeIndicator.cpp  AttitudeIndicator.h  ThreeDView.cpp  ThreeDView.h  WaveformPlot.cpp  WaveformPlot.h
MPU6500/MPU6500/: .mxproject  MPU6500.ioc
MPU6500/MPU6500/Core/Src/: gpio.c  main.c
MPU6500/MPU6500/Driver_code/: I2C.c  I2C.h  MPU6500.c  MPU6500.h
MPU6500/MPU6500/MDK-ARM/: MPU6500.uvguix.Lenovo  MPU6500.uvoptx  MPU6500.uvprojx  startup_stm32f427xx.lst
MPU6500/MPU6500/MDK-ARM/.eide/: eide.yml  env.ini  files.options.yml
MPU6500/MPU6500/MDK-ARM/MPU6500/: MPU6500.axf  MPU6500.build_log.htm  MPU6500.hex  MPU6500.htm  MPU6500.lnp  MPU6500.map  MPU6500_MPU6500.dep  gpio.crf  gpio.d  i2c.crf  i2c.d  main.crf  main.d  mpu6500.crf  mpu6500.d  startup_stm32f427xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.crf  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.crf  (+21 more)
(+3 files in other folders)
